--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
-
+img,
+object,
+embed,
+video {
+  max-width: 100%;
+}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -15,11 +20,11 @@ body {
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	color: #333;
+  color: #333;
 }
 a {
 	color: orange;
-	text-decoration: none;
+  text-decoration: none;
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -30,7 +35,7 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 10%;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -43,15 +48,15 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
+  letter-spacing: 1em;
+  padding: 15%;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 5vh;
   background-color: #252831;
   text-align:center;
 }
@@ -61,9 +66,12 @@ nav h1 {
 nav h1 a {
   color: #fff;
   font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
+  font-weight: 100;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 5vh;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -99,12 +107,14 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 25vh;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 50px;
   background-color: #3397DB;
@@ -112,17 +122,17 @@ nav h1 a {
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
-  font-weight: normal;
+  font-size: 1.1rem;
+  font-weight: bold;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 10px;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 1.1rem;
+  min-height: 40px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
@@ -131,29 +141,34 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  flex-wrap: wrap;
+  display: flex;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 3% 1% 3%;
   text-align: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  font-family: Arial, sans-serif;
+  padding: 1em 1em 1em;
+  width: 80%;
+  height: 50vh;
+  margin: auto;
+  margin-bottom: 2vh;
+  list-style: none;
+  text-align: center;
+  display: block;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  height: 25vh;
+  width: 80%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -174,12 +189,16 @@ nav h1 a {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  font: bold 16px sans-serif;
   text-align: center;
+  margin: 15px 0 0;
+  padding: 1% 3% 1%;
+  line-height: 45px;
   text-decoration: none;
   text-transform: uppercase;
+  display: block;
+  height: 40px;
+  min-width: 40px;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -272,4 +291,31 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media screen and (min-width:680px) and (max-width:1024px) {
+  #restaurants-list li {
+    max-width: 45%;
+    margin: auto;
+    height: 42vh;
+  }
+  nav h1 a {
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 1em;
+    line-height: 5vh;
+  }
+}
+
+@media screen and (min-width:1025px) {
+  #restaurants-list li {
+    max-width: 25%;
+    height: 42vh;
+  }
+  nav h1 a {
+    font-size: 24pt;
+    font-weight: bold;
+    letter-spacing: 1em;
+    line-height: 5vh;
+  }
 }
