--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-img,
-object,
-embed,
-video {
-  max-width: 100%;
-}
-body,td,th,p{
+body,
+td,
+th,
+p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
@@ -40,23 +37,20 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-#maincontent {
-  background-color: #f3f3f3;
-  min-height: 100%;
-}
+
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
-  letter-spacing: 1em;
-  padding: 15%;
+  font-size: 1em;
+  letter-spacing: 0.25em;
+  padding: 2%;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 5vh;
+  height: 7vh;
   background-color: #252831;
   text-align:center;
 }
@@ -65,13 +59,12 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.1em;
+  letter-spacing: 0.25em;
   font-weight: 100;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 5vh;
+
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -79,12 +72,12 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 1.1em;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -107,7 +100,7 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 25vh;
+  height: 33vh;
   width: 100%;
   background-color: #ccc;
 }
@@ -120,54 +113,44 @@ nav h1 a {
   background-color: #3397DB;
   align-items: center;
 }
-.filter-options h2 {
-  color: white;
-  font-size: 1.1rem;
-  font-weight: bold;
-  line-height: 1;
-  margin: 0 10px;
-}
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 1.1rem;
   min-height: 40px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  margin: 5px;
+  padding: 0 5px;
+  width: 150px;
+  margin: auto;
 }
 
 /* ====================== Restaurant Listing ====================== */
-#restaurants-list {
-  flex-wrap: wrap;
+.restaurant-listing ul {
   display: flex;
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  padding: 3% 1% 3%;
-  text-align: center;
+  flex-wrap: wrap;
+  padding: 0;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
-  padding: 1em 1em 1em;
-  width: 80%;
-  height: 50vh;
-  margin: auto;
-  margin-bottom: 2vh;
+  padding: 1em 1em 1em 1em;
+  margin: 0;
   list-style: none;
   text-align: center;
-  display: block;
+  width: 275px;
+  min-height: 300px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   margin: 0;
   max-width: 100%;
-  height: 25vh;
   width: 80%;
 }
 #restaurants-list li h1 {
@@ -188,7 +171,6 @@ nav h1 a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
-  display: inline-block;
   font: bold 16px sans-serif;
   text-align: center;
   margin: 15px 0 0;
@@ -197,35 +179,9 @@ nav h1 a {
   text-decoration: none;
   text-transform: uppercase;
   display: block;
-  height: 40px;
-  min-width: 40px;
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -258,12 +214,9 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-#reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -293,29 +246,31 @@ nav h1 a {
   color: #666;
 }
 
-@media screen and (min-width:680px) and (max-width:1024px) {
-  #restaurants-list li {
-    max-width: 45%;
-    margin: auto;
-    height: 42vh;
+@media screen and (min-width: 550px){
+  #restaurants-list li{
+    display: inline-block;
+    margin: 2vh 2vh 2vh 0;
   }
-  nav h1 a {
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 1em;
-    line-height: 5vh;
-  }
-}
 
-@media screen and (min-width:1025px) {
-  #restaurants-list li {
-    max-width: 25%;
-    height: 42vh;
+  .restaurant-listing ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    flex-direction: row;
+    justify-content: center;
   }
-  nav h1 a {
-    font-size: 24pt;
-    font-weight: bold;
-    letter-spacing: 1em;
-    line-height: 5vh;
+
+  .restaurant-pack {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  #restaurant-container, #reviews-container {
+    width: 50%;
+  }
+
+  .filter-options select {
+    width: 250px;
   }
 }
